# timecard-bot

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  default.nix  pyproject.toml
timecarder/: bot.py  test.py
