[tool.poetry]
name = "timecarder"
version = "0.1.0"
description = "a bot for recording timecard stuff"
authors = ["Eli Ribble <eli@gleipnir.technology>", "William Ribble"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
timecardbot = "timecarder.test:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

